--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon .bin/www"
+    "dev":"nodemon ./bin/www",
+    "test": "mocha -w"
   },
   "dependencies": {
-    "bcrypt": "^3.0.5",
+    "@google-cloud/storage": "^2.4.3",
+    "bcrypt": "^3.0.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-validator": "^5.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.0",
+    "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.4.19",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "slugify": "^1.3.4"
@@ -23,6 +25,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "dotenv": "^7.0.0",
-    "mocha": "^6.1.2"
+    "faker": "^4.1.0",
+    "mocha": "^6.0.2"
   }
 }
